--- a/saga-pattern/order/src/main/resources/application.yaml
+++ b/saga-pattern/order/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-service
+    name: order
   datasource:
     url: jdbc:h2:file:./data/micro-task;AUTO_SERVER=TRUE
     username: sa
