--- a/saga-pattern/payment/src/main/resources/application.yaml
+++ b/saga-pattern/payment/src/main/resources/application.yaml
@@ -1,6 +1,26 @@
 spring:
   application:
     name: payment
+
+  kafka:
+    bootstrap-servers: localhost:9092 # Kafka server address
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
+
   datasource:
     url: jdbc:h2:file:./data/micro-task;AUTO_SERVER=TRUE
     username: sa
