Add project with outbox pattern

--- a/saga-outbox-pattern/order-poller/src/main/resources/application.yaml
+++ b/saga-outbox-pattern/order-poller/src/main/resources/application.yaml
@@ -1,16 +1,16 @@
 spring:
   application:
-    name: order-service
+    name: order-poller
   kafka:
-    bootstrap-servers: localhost:9092 # Kafka server address
-    consumer:
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
         spring:
           json:
             trusted:
               packages: '*'
-
   datasource:
     url: jdbc:h2:file:./data/micro-outbox-task;AUTO_SERVER=TRUE
     username: sa
@@ -28,6 +28,6 @@ spring:
   sql:
     init:
       platform: h2
-
 server:
-  port: 8080
+  port: 9090
+
