--- a/saga-outbox-pattern/payment-service/src/main/resources/application.yaml
+++ b/saga-outbox-pattern/payment-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: order-service
+    name: payment-service
   kafka:
     bootstrap-servers: localhost:9092 # Kafka server address
     consumer:
@@ -10,7 +10,14 @@ spring:
           json:
             trusted:
               packages: '*'
-
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
   datasource:
     url: jdbc:h2:file:./data/micro-outbox-task;AUTO_SERVER=TRUE
     username: sa
@@ -30,4 +37,4 @@ spring:
       platform: h2
 
 server:
-  port: 8080
+  port: 8081
