--- a/saga-outbox-pattern/pom.xml
+++ b/saga-outbox-pattern/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-<!--    <modules>-->
-<!--        <module>order</module>-->
-<!--        <module>payment</module>-->
-<!--    </modules>-->
+    <modules>
+        <module>order-service</module>
+        <module>payment-service</module>
+    </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
